--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -5,6 +5,9 @@
     <a [title]="product.name + ' details'"></a>
     {{ product.name }}
   </h3>
+  <p *ngIf="product.description">Description: {{ product.description }}</p>
+
+  <button type="button" (click)="share()">Share</button>
 </div>
 <!-- 
 Copyright Google LLC. All Rights Reserved.
