--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,8 +2,12 @@
 
 <div *ngFor="let product of products">
   <h3>
-    <a [title]="product.name + ' details'"></a>
-    {{ product.name }}
+    <a
+      [title]="product.name + ' details'"
+      [routerLink]="['/products', product.id]"
+    >
+      {{ product.name }}
+    </a>
   </h3>
   <p *ngIf="product.description">Description: {{ product.description }}</p>
 
